sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
var i=0
var inverse:Boolean=true;
var T: Int=getNombreValeurs()
while(inverse==true){ 
	i=i+1
	inverse=false
     for(k<-0 to T-2-i){       
	   if(getValeur(k)>getValeur(k+1)){
	    echange(k+1,k)
	    inverse=true
	}
	
} 
}
}

}
